# MLOpsProject

./: .gitignore  .pre-commit-config.yaml  Dockerfile.dockerfile  README.md  cloudbuild.yaml  report.html
.dvc/: config
MLOpsProject/: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile.dockerfile  Makefile  README.md  api.dockerfile  cloudbuild.yaml  environment.yaml  makeItPublic.py  prediction_logs.csv  pyproject.toml  report.html  requirements.txt  requirements_dev.txt  tasks.py  train.dockerfile  train_vertex_ai.py
MLOpsProject/.dvc/: config
MLOpsProject/.dvc/tmp/: lock
MLOpsProject/.github/workflows/: docker-build.yml  tests.yaml
MLOpsProject/Week1/: __init__.py  dataset.py  features.py  plots.py
MLOpsProject/Week1/modeling/: predict.py  train.py
MLOpsProject/configs/: sweep.yaml
MLOpsProject/data/: processed.dvc
MLOpsProject/data/processed/: test_encodings.pt  test_labels.pt  train_labels.pt  unique_labels.pt
MLOpsProject/data/raw/: Test.csv
MLOpsProject/dockerFiles/: main.dockerfile
MLOpsProject/dockerfiles/: api.dockerfile  train.dockerfile
MLOpsProject/docs/: mkdocs.yaml  mkdocs.yml
MLOpsProject/docs/docs/: index.md
MLOpsProject/front_end/: app.py  dockerfile.dockerfile
MLOpsProject/onnx_deployment/: create_onnx.py  onnx_fastapi.py  onnx_test.py
MLOpsProject/reports/: README.md  data_statistics.md  report.py
MLOpsProject/system_monitoring/: run_monitoring.config  run_service.yaml
MLOpsProject/tests/: __init__.py  locustfile.py  test_api.py  test_data.py  test_model.py
MLOpsProject/wandb/: latest-run
(+29 files in other folders)
