[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Week1"
version = "0.0.1"
description = "\u0016"
authors = [
  { name = "Alfonso Cunha, Lydia Kasapi, Sabina Kozlowska, Sandra Gomez" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["Week1"]
force_sort_within_sections = true
